--- a/AndroidApp/app/src/main/res/layout/perfil.xml
+++ b/AndroidApp/app/src/main/res/layout/perfil.xml
@@ -52,6 +52,7 @@
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="mostrarPublicaciones"
         android:text="VER PUBLICACIONES"
         app:layout_constraintStart_toStartOf="@+id/textView8"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
