--- a/views/usuario.html
+++ b/views/usuario.html
@@ -105,6 +105,12 @@
             </div>
 
         </main>
+        %if error == 4:
+        <div class="alert">
+            <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+            Usuario no encontrado
+        </div>
+        %end
 
 </body>
 </html
